--- a/main.html
+++ b/main.html
@@ -13,6 +13,8 @@
 </head>
 <body>
 
+
+
 <!-- Fixed navbar -->
 <nav class="navbar navbar-static-top navbar-inverse">
     <div class="container">
@@ -33,6 +35,7 @@
                 <li><a href="#help">Help</a></li>
             </ul>
         </div>
+        <a href="https://github.com/kindlychung/mathide"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
         <!--/.nav-collapse -->
     </div>
 </nav>
