--- a/main.html
+++ b/main.html
@@ -7,6 +7,15 @@
         .sep {
             height: 5000px;
         }
+        #githubstar {
+            width: 74px;
+            height: 22px;
+            margin-left: 15px;
+            margin-right: auto;
+            margin-top: 15px;
+            /*padding-bottom: 15px;*/
+            /*background-color: #777;*/
+        }
     </style>
     <script src="web/js/jquery-2.1.4.min.js"></script>
     <link rel="shortcut icon" href="img/math.png">
@@ -33,6 +42,11 @@
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#help">Help</a></li>
+                <li>
+                        <iframe id="githubstar" src="https://ghbtns.com/github-btn.html?user=kindlychung&repo=mathide&type=star&count=true" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+                    <!--<div id="githubstar" style="text-align: center; width: 100%; border: 1px solid blue; height: 100%; margin: 0px; padding: 0px">-->
+                    <!--</div>-->
+                </li>
             </ul>
         </div>
         <a href="https://github.com/kindlychung/mathide"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
